syntax = "proto3";

package iceberg_commit_metadata;

import "stream_plan.proto";

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

// Iceberg sink commit metadata
// Used for coordinating iceberg sink commits with schema change support
message IcebergCommitMetadata {
  // Write results from each parallelism
  // Each item is a serialized IcebergCommitResult (JSON format)
  repeated bytes write_results = 1;

  // Snapshot ID from iceberg table
  // None if only schema change without data
  optional int64 snapshot_id = 2;

  // Schema change information
  // None if no schema change
  optional stream_plan.SinkSchemaChange schema_change = 3;
}
